# master-project

./: .gitignore  CMakeLists.txt  debugserver.sh  fix_sp.py  header_generate.py  header_generate.sh  test_cases_CWE121_Stack_Based_Buffer_Overflow.h  test_cases_testcases.h  toolchain.cmake
llvm/: CMakeLists.txt  MPUPass.cpp  MPUPass.h  TagPass.cpp  TagPass.h  TestPass.cpp
runtime/: CMakeLists.txt  MPU.c  debugger.c  heapManager.c  heapManager.h  intrinsicFunction.c  runtimeConfig.h  syscalls.c  tagManager.c  tagManager.h  testPrint.c
stm32/: CMakeLists_tmp.txt  Makefile  STM32L562xE_FLASH.ld  STM32L562xE_SHADOW.ld  STM32L562xx_RAM.ld
stm32/Core/Inc/: application.h  main.h  stm32l5xx_hal_conf.h  stm32l5xx_it.h  testcase_without_pass.h
stm32/Core/Inc/testcasesupport/: CWE122_Heap_Based_Buffer_Overflow__c_CWE805_wchar_t_memmove_01.h  std_testcase_io.h  test_cases_CWE121_Stack_Based_Buffer_Overflow.h  testcase.h
stm32/Core/Src/: application.c  io.c  main.c  stm32l5xx_hal_msp.c  stm32l5xx_it.c  testcase_without_pass.c
stm32/Core/Src/testcases/CWE121_Stack_Based_Buffer_Overflow/s09/: CWE121_Stack_Based_Buffer_Overflow__src_char_declare_cpy_01.c
stm32/Core/Src/testcases/CWE122_Heap_Based_Buffer_Overflow/s09/: CWE122_Heap_Based_Buffer_Overflow__c_CWE805_wchar_t_memmove_01.c
stm32/Core/Src/testcases/CWE124_Buffer_Underwrite/s02/: CWE124_Buffer_Underwrite__CWE839_negative_01.c
stm32/Core/Src/testcases/CWE124_Buffer_Underwrite/s03/: CWE124_Buffer_Underwrite__new_char_cpy_01.c
stm32/Core/Src/testcases/CWE124_Buffer_Underwrite/s04/: CWE124_Buffer_Underwrite__char_alloca_memcpy_01.c  CWE124_Buffer_Underwrite__wchar_t_alloca_memcpy_01.c
stm32/Core/Src/testcases/CWE126_Buffer_Overread/s02/: CWE126_Buffer_Overread__malloc_char_loop_01.c
stm32/Core/Src/testcases/CWE415_Double_Free/s01/: CWE415_Double_Free__malloc_free_char_01.c
stm32/Core/Src/testcases/CWE416_Use_After_Free/: CWE416_Use_After_Free__malloc_free_char_01.c
stm32/Core/Src/testcases/CWE476_NULL_Pointer_Dereference/: CWE476_NULL_Pointer_Dereference__char_01.c
stm32/Drivers/CMSIS/Device/ST/STM32L5xx/Include/: stm32l5xx.h
stm32/Drivers/STM32L5xx_HAL_Driver/Inc/: stm32l5xx_hal.h
stm32/runtime/: CMakeLists.txt  testPrint.c
tool/: fix_sp.py
